# introduction-to-rust

./: Cargo.toml  notes.md  operations.txt
src/: async_functions.rs  basic_io.rs  collections_generics_traits.rs  db.rs  exercises.rs  integration.rs  language_basics.rs  main.rs  memory_management.rs  threads.rs  wrapper.rs
src/exercises/: budget.rs  cat.rs  echo.rs  fibonacci.rs  find.rs  grep.rs  grep_classic.rs  guess_game.rs  money_with_enums.rs  recursive_structure.rs  tic_tac_toe.rs  utils.rs
src/functions/: closures_and_nested_functions.rs  closures_fn.rs  closures_fnmut.rs  closures_fnonce.rs
tests/: operators_test.rs
