[package]
name = "rust-fundamentals"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
chrono = "0.4.38"
rand = "0.8.5"
regex = "1.10.2"
walkdir = "2.4.0"
futures = "0.3.30"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }